# clitool

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  custom.example.json  docker-compose.yml  pyproject.toml  setup.cfg
clitool/: cache.py  cli.py  console.py  constants.py  logger.py  settings.py  utils.py
clitool/commands/: __init__.py  base.py  cloudformation.py  dynamodb.py  ecr.py  s3.py  secrets_manager.py  secretsmanager.py  session.py
clitool/commands/iam/: __init__.py  custom.py  policy.py  role.py
clitool/commands/lambda_/: __init__.py  base.py  function.py  layer.py
clitool/services/: __init__.py  base.py  cloudformation.py  dynamodb.py  ecr.py  secrets_manager.py  secretsmanager.py  session.py
clitool/services/iam/: __init__.py  custom.py  policy.py  role.py
clitool/services/lambda_/: __init__.py  function.py  layer.py
clitool/services/s3/: __init__.py  bucket.py  object.py
clitool/types/: __init__.py  base.py  cloudformation.py  dynamodb.py  ecr.py  iam.py  lambda_.py  s3.py  secrets_manager.py  secretsmanager.py  session.py  table.py
compose/lambda/python-layers/: python312.Dockerfile  python38-311.Dockerfile
local/localstack/: dynamodb.sh  s3.sh  secretsmanager.sh  sqs.sh
scripts/: export_python_layer.sh
tests/: __init__.py  conftest.py
tests/dummy/.aws/: config  credentials
tests/dummy/cloudformation/: cfn-template.yaml  invalid-template.yaml  sam-template.yaml
tests/services/: test_cloudformation.py  test_s3.py  test_secrets_manager.py  test_session.py
tests/types/: test_profile.py
