[tool.poetry]
name = "clitool"
version = "0.1.0"
description = "clitool"
authors = ["anhlt <tuananh220695@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "~1.34.0"
click = "~8.1.0"
rich = "~13.7.0"
click_shell = "~2.1.0"
click-completion = "~0.5.0"
cfn_flip = "~1.3.0"
cfn-lint = "~0.86.0"

[tool.poetry.group.test.dependencies]
pytest = "~8.1.0"
moto = "~5.0.0"
pytest-cov = "~5.0.0"
openapi-spec-validator = "~0.7.0"

[tool.poetry.group.local.dependencies]
pre-commit = "~3.7.0"
coverage-badge = "~1.1.0"

[tool.poetry.scripts]
cli = "clitool.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# CQA tools ------------------------------------------------------------------
[tool.black]
line_length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.bandit]
exclude_dirs = ["tests", "scripts", "data", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
#addopts = "-v -ra -q"
#log_cli = true
#log_cli_level = "INFO"
#log_format = "%(asctime)s %(levelname)s %(message)s"
#log_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "ignore::DeprecationWarning",
]
norecursedirs = ["docs", "build", "local"]

[tool.coverage.run]
source = ["clitool"]
omit = ["clitool/commands/*"]
